Book now button layout issues

--- a/frontend/scss/modules/_hotel.scss
+++ b/frontend/scss/modules/_hotel.scss
@@ -61,6 +61,7 @@
 		display: flex;
 		align-items: flex-end;
 		justify-content: flex-end;
+		min-width: 200px;
 
 		.action-primary {
 			// margin: auto auto 0;
